# lysergic-engineering-platform

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  lep.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/control-plane/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/control-plane/alembic/: env.py
apps/api/control-plane/alembic/versions/: a1b2c3d4e5f6_create_executions_table.py  eb25d0cd0861_initial.py
apps/api/control-plane/src/api/: dependencies.py  errors.py  exceptions.py  health.py  router.py
apps/api/control-plane/src/application/: __init__.py  app.py  dto.py  exceptions.py  execution_dto.py  execution_service.py  execution_use_cases.py  interfaces.py
apps/api/control-plane/src/application/audit/: execution_audit.py
apps/api/control-plane/src/application/dto/: execution_projection.py
apps/api/control-plane/src/config/: settings.py
apps/api/control-plane/src/domain/: __init__.py  entities.py  exceptions.py  execution.py  execution_status.py  repository.py  value_objects.py
apps/api/control-plane/src/observability/: configure_logging.py  context.py  middleware.py
apps/api/control-plane/tests/: conftest.py  test_api_contracts.py  test_architecture.py  test_database_config.py  test_database_infrastructure.py  test_dependency_composition.py  test_execution_audit.py  test_execution_lifecycle.py  test_execution_persistence.py  test_execution_queries.py  test_execution_service.py  test_health.py  test_observability.py
decisions/: DEC-ECP-E0.1-0001.yaml  (+2 more)
(+524 files in other folders)
