[project]
name = "lep-control-plane"
version = "0.1.0"
description = "LEP Control Plane FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic-settings>=2.6",
    "uvicorn>=0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true
